--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="Images/favicon.png">
 </head>
 
 <body>
@@ -38,7 +39,7 @@
         <p>Here are some of the projects that I'm most proud of. (Section Work In Progress)</p>
 
         <div class="row">
-            <a href="" class="project-col">
+            <a href="https://drive.google.com/drive/folders/1nY6uOClhC3xW3xLyTqIPX61fH-7Hkaav?usp=sharing" class="project-col">
                 <h3>Automatic Sumo Bot</h3>
                 <p>Line-Detection, Bot-Detection, etc</p>
                 <img src="Images/sumopic.JPG">
