--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="Images/favicon.png">
 </head>
 
 <body>
@@ -32,21 +33,27 @@
     <section class="projects" id="projectsection">
         <div class="row">
             <div class="project-col">
-                <h3>Automatic Sumo Bot</h3>
-                <p>Line-Detection, Bot-Detection, etc</p>
-                <img src="Images/sumopic.JPG">
+                <a href="https://drive.google.com/drive/folders/1nY6uOClhC3xW3xLyTqIPX61fH-7Hkaav?usp=sharing" class="project-col">
+                    <h3>Automatic Sumo Bot</h3>
+                    <p>Line-Detection, Bot-Detection, etc</p>
+                    <img src="Images/sumopic.JPG">
+                </a>
             </div>
 
             <div class="project-col">
-                <h3>Arduino Arcade Game</h3>
-                <p>Bluetooth & Custom Android App</p>
-                <img src="Images/cyclonepic.jpg">
+                <a href="https://www.youtube.com/watch?v=cD_g0Y-2klY&ab_channel=StevenMu" target="_blank" class="project-col">
+                    <h3>Arduino Arcade Game</h3>
+                    <p>Bluetooth & Custom Android App</p>
+                    <img src="Images/cyclonepic.jpg">
+                </a>
             </div>
 
             <div class="project-col">
-                <h3>Motion Sensing Trash Can</h3>
-                <p>Uses Simple Arduino Logic</p>
-                <img src="Images/trashcanpic.JPG">
+                <a href="https://www.youtube.com/watch?v=ahnEU0YW89A&ab_channel=StevenMu" target="_blank" class="project-col">
+                    <h3>Motion Sensing Trash Can</h3>
+                    <p>Uses Simple Arduino Logic</p>
+                    <img src="Images/trashcanpic.JPG">
+                </a>
             </div>
         </div>
     </section>
