added project page

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="index.html">PROJECTS</a></li> <!--remember to change this back to project-->
+                        <li><a href="projects.html">PROJECTS</a></li> <!--remember to change this back to project-->
                         <li><a href="#aboutsection">ABOUT ME</a></li>
                         <li><a href="mailto:xsmu0922@gmail.com">CONTACT</a></li>
                     </ul>
