added projects button

--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,14 @@
             </a>
         </div>
 
+        <a href ="projects.html" class="hero-btn2">All Projects</a>
+
+    </section>
+
+    <!-----The line----->
+
+    <section class="line">
+        <p></p>
     </section>
 
     <!-----About me----->
@@ -82,11 +90,13 @@
     <section class="about" id="aboutsection"> 
         <h2>About Me</h2>
         <img src="Images/headshot.jpg" class="floatLeft">
-        <p id="one">Hello, my name is Steven. I am heading into my senior year of high school this fall at Sir John A. Macdonald Secondary School in Waterloo, Ontario, Canada. </p>
+        <p id="one">Hello, my name is Steven. I am currently a grade 12 student at Sir John A. Macdonald Secondary School in Waterloo, Ontario, Canada. </p>
         <p id="two">Throughout my life, I’ve always had a passion towards innovation and helping people with the power of technology, and this started early when my mother got me an Arduino in the 8th grade. Ever since then, I’ve worked on numerous projects involving both computer software and hardware. I can work with python, C++, html/css as well as the arduino language.</p>
-        <p id="three">In my spare time, I am a competitive track and field athlete specializing in the jumps. Besides that, I also played volleyball and swam for my high school. I’m also part of multiple clubs at SJAM including the Hack Club, in which I am the head robotics executive. If you would like to contact me, please click on the button below!</p>
+        <p id="three">In my spare time, I am a competitive track and field athlete specializing in the jumps. Besides that, I also played volleyball and swam for my high school. I’m also part of multiple clubs at SJAM including the Engineering Club, in which I am the head robotics executive of. If you would like to contact me, please click on the button below!</p>
         <a href="mailto:xsmu0922@gmail.com" class="hero-btn2">Contact By Email</a>
     </section>
+
+    <!-----Socials----->
 
     <section class="socials">
         <div class='icons'>
