--- a/public/projects.html
+++ b/public/projects.html
@@ -61,13 +61,19 @@
                 <a href="https://www.youtube.com/watch?v=79rnmJu4klA&ab_channel=StevenMu" target = "_blank" class="project-col">
                     <h3>Parkspace</h3>
                     <p>Meetings Online Made Easy</p>
-                    <img src="Images/parkspace.png">
+                    <img src="Images/parkspace.jpg">
                 </a>
 
                 <a href="https://www.youtube.com/watch?v=fo-uvdiLZIU" target = "_blank" class="project-col">
                     <h3>MailNotify</h3>
                     <p>Turning Paper Mail Into Email</p>
-                    <img src="Images/mailnotify.jpg">
+                    <img src="Images/mailnotify.jpeg">
+                </a>
+
+                <a href="https://www.youtube.com/watch?v=cwwhuphmKX0&ab_channel=StevenMu" target = "_blank" class="project-col">
+                    <h3>SleepStop</h3>
+                    <p>Stopping Fatigued Driving Forever</p>
+                    <img src="Images/sleepstop.png">
                 </a>
             </div>
 
