--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
                         <li><a href="projects.html">PROJECTS</a></li> <!--remember to change this back to project-->
                         <li><a href="#aboutsection">ABOUT ME</a></li>
                         <li><a href="mailto:xsmu0922@gmail.com">CONTACT</a></li>
+                        <li><a href="Images/Steven's Resume.pdf" target="_blank">RESUME</a></li>
                     </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -55,7 +56,7 @@
         <p>Here are some of the projects that I'm most proud of.</p>
 
         <div class="row">
-            <a href="https://drive.google.com/drive/folders/1nY6uOClhC3xW3xLyTqIPX61fH-7Hkaav?usp=sharing" class="project-col">
+            <a href="https://drive.google.com/drive/folders/1nY6uOClhC3xW3xLyTqIPX61fH-7Hkaav?usp=sharing" target="_blank" class="project-col">
                 <h3>Automatic Sumo Bot</h3>
                 <p>Line-Detection, Bot-Detection, etc</p>
                 <img src="Images/sumopic.JPG">
