--- a/public/projects.html
+++ b/public/projects.html
@@ -20,6 +20,7 @@
                             <li><a href="projects.html">PROJECTS</a></li> <!--remember to change this back to project-->
                             <li><a href="index.html#aboutsection">ABOUT ME</a></li>
                             <li><a href="mailto:xsmu0922@gmail.com">CONTACT</a></li>
+                            <li><a href="Images/Steven's Resume.pdf" target="_blank">RESUME</a></li>
                         </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
