--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,10 @@
         <p>Here are some of the projects that I'm most proud of.</p>
 
         <div class="row">
-            <a href="https://drive.google.com/drive/folders/1nY6uOClhC3xW3xLyTqIPX61fH-7Hkaav?usp=sharing" target="_blank" class="project-col">
-                <h3>Automatic Sumo Bot</h3>
-                <p>Line-Detection, Bot-Detection, etc</p>
-                <img src="Images/sumopic.JPG">
+            <a href="https://www.youtube.com/watch?v=fo-uvdiLZIU" target="_blank" class="project-col">
+                <h3>MailNotify</h3>
+                <p>Turning Paper Mails Electronic</p>
+                <img src="Images/mailnotify.jpeg">
             </a>
 
             <a href="https://www.youtube.com/watch?v=cD_g0Y-2klY&ab_channel=StevenMu" target="_blank" class="project-col">
@@ -89,7 +89,7 @@
 
     <section class="about" id="aboutsection"> 
         <h2>About Me</h2>
-        <img src="Images/headshot.jpg" class="floatLeft">
+        <img src="Images/headshot2.jpg" class="floatLeft">
         <p id="one">Hello, my name is Steven. I am currently a grade 12 student at Sir John A. Macdonald Secondary School in Waterloo, Ontario, Canada. </p>
         <p id="two">Throughout my life, I’ve always had a passion towards innovation and helping people with the power of technology, and this started early when my mother got me an Arduino in the 8th grade. Ever since then, I’ve worked on numerous projects involving both computer software and hardware. I can work with python, C++, html/css as well as the arduino language.</p>
         <p id="three">In my spare time, I am a competitive track and field athlete specializing in the jumps. Besides that, I also played volleyball and swam for my high school. I’m also part of multiple clubs at SJAM including the Engineering Club, in which I am the head robotics executive of. If you would like to contact me, please click on the button below!</p>
@@ -105,6 +105,7 @@
             <a href= "https://www.youtube.com/channel/UCn97Vx-VfeXK8ox3OWPeWWQ" target = "_blank" class ="mediabtn"><i class='fa fa-youtube-square fa-3x'></i></a> 
             <a href= "https://www.instagram.com/steven.mu.12/" target = "_blank" class ="mediabtn"><i class='fa fa-instagram fa-3x'></i></a>
         </div>
+        <p>Check out my socials!</p>
     </section>
 
     <!-----Footer------>
